--- a/package.json
+++ b/package.json
@@ -53,6 +53,8 @@
     "font-awesome": "^4.7.0",
     "purecss": "^0.6.2",
     "react": "^15.4.2",
-    "react-dom": "^15.4.2"
+    "react-dom": "^15.4.2",
+    "react-redux": "^5.0.3",
+    "redux": "^3.6.0"
   }
 }
