--- a/.gitignore
+++ b/.gitignore
@@ -3,5 +3,6 @@ node_modules
 build
 *~
 .DS_Store
+.eslintcache
 # put any other files you don't want to check in here,
 # such as .DS_Store (OSX), *.bak, etc.
